@@ -31,8 +31,6 @@ To get started entering your own data, see the
 README file that came with this software, or
 view the lastest version at
 <a href="http://neal.mcburnett.org/electionaudits/README">README</a>.
-</p>
-<p>
 See also the
 <a href="/admin/doc/models/#electionaudits">local documentation</a>
 by logging in with the admin account and password
@@ -43,8 +41,11 @@ that you established when you initialized this django site.
 
 <ul>
 <li><a href="reports/">Audit reports</a></li>
+<li><a href="stats/">Ad-Hoc Contest Statistics</a></li>
+<!--
 <li><a href="contests/">Contests</a></li>
 <li><a href="votecounts/">Vote Counts</a></li>
+-->
 <li><a href="databrowse/">Browse all data</a></li>
 </ul>
 {% endblock %}
