@@ -8,7 +8,7 @@
     <h2>Audit Report for {{ object }}</h2>
 <p>Number of audit units: {{ object.contestbatch_set.all|length }}</p>
 <p>Margin of victory is {{ object.margin|floatformat:3 }}%</p>
-<p>Number of audit units to audit (PPEBWR): {{ object.selection_stats.ppebwr_precincts|floatformat:0 }} <a href="#stats">more stats below...</a></p>
+<p>Number of audit units to audit (PPEBWR): {{ object.stats.ppebwr_precincts|floatformat:0 }} <a href="#stats">more stats below...</a></p>
 
 <table border="border" cellpadding="5">
 <thead>
@@ -54,6 +54,6 @@
 </table>
 <pre>
 <a name="stats">Audit statistics:</a>
-{{ object.selection_stats.prose }}
+{{ object.stats.prose }}
 </pre>
 {% endblock %}
